--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "express": "^4.21.2",
     "pg": "^8.14.1",
-    "dotenv": "17.2.3"
+    "path": "^0.12.7"
   },
   "engines": {
     "node": "24.x"
